configuration files/kubernetes/LoadBalancer_service-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: service_name
spec:                              #define the service
  type: LoadBalancer               #service type
  ports:
    - port: 80                     #port on the service
      targetPort: 80               #port on pod where the app is running
      nodePort: 30008              #port on the node (30000-32767) 
  selector:                        #identify which pods belong to the service
    env: production
