configuration files/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress_name 
spec:
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service_name   # which i want to redirect the incoming traffic to
            port:
              number: 80         # portnumber of the service
